fix elements for increased accessibility

--- a/accessibility/fix-a11y/06-index.html
+++ b/accessibility/fix-a11y/06-index.html
@@ -160,8 +160,8 @@
               <form action="#" method="post">
                 <div class="input-group">
                   <label class="visually-hidden" for="email"></label>
-                  <input class="form-control" type="text" name="email" placeholder="Enter Email Address" id="email">
-                  <div class="input-group-btn"><a class="btn" type="submit">Validate</a></div>
+                  <input class="form-control" type="email" name="email" id="email" autocomplete="email" required aria-required="true">
+                  <div class="input-group-btn"><button class="btn" type="submit">Validate</button></div>
                 </div>
               </form>
             </div>
