--- a/accessibility/fix-a11y/05-index.html
+++ b/accessibility/fix-a11y/05-index.html
@@ -158,9 +158,10 @@
               <h4>Newsletter</h4>
               <p>Stay updated with our latest trends</p>
               <form action="#" method="post">
+                <label class="visually-hidden" for="email"></label>
                 <div class="input-group">
-                  <input class="form-control" type="text" name="email" placeholder="Enter Email Address">
-                  <div class="input-group-btn"><a class="btn" type="submit">Validate</a></div>
+                  <input class="form-control" type="email" name="email" id="email" autocomplete="email" required aria-required="true">
+                  <div class="input-group-btn"><button class="btn" type="submit">Validate</button></div>
                 </div>
               </form>
             </div>
