added labels for icons

--- a/accessibility/fix-a11y/06-index.html
+++ b/accessibility/fix-a11y/06-index.html
@@ -159,8 +159,8 @@
               <p>Stay updated with our latest trends</p>
               <form action="#" method="post">
                 <div class="input-group">
-                  <label class="visually-hidden" for="email"></label>
                   <input class="form-control" type="email" name="email" id="email" autocomplete="email" required aria-required="true">
+                  <label class="visually-hidden" for="email"></label>
                   <div class="input-group-btn"><button class="btn" type="submit">Validate</button></div>
                 </div>
               </form>
@@ -170,7 +170,7 @@
             <div class="footer-widget">
               <h4>Follow Me</h4>
               <p>Let us be social</p>
-              <div><a href="#"><i class="facebook-icon"></i></a><a href="#"><i class="twitter-icon"></i></a></div>
+              <div><a href="#" aria-label="Facebook"><i class="facebook-icon"></i></a><a href="#" aria-label="Twitter"><i class="twitter-icon"></i></a></div>
             </div>
           </div>
         </div>
