--- a/form/03-article.html
+++ b/form/03-article.html
@@ -153,19 +153,19 @@
                 <div class="form-group col-1-2">
                   <label for="your-first-name">First Name</label>
                   <div class="form-field">
-                    <span class="form-group form-field-container"></span>
+                    <span class="form-field-container"></span>
                   </div>
                 </div>
                 <div class="form-group col-1-2">
                   <label for="your-last-name">Last Name</label>
                   <div class="form-field">
-                    <span class="form-group form-field-container"></span>
+                    <span class="form-field-container"></span>
                   </div>
                 </div>
                 <div class="form-group col-2-3">
                   <label for="your-email">Email</label>
                   <div class="form-field">
-                    <span class="form-group form-field-container"></span>
+                    <span class="form-field-container"></span>
                   </div>
                 </div>
               </fieldset>
@@ -174,13 +174,13 @@
                 <div class="form-group col-2-3">
                   <label for="your-title">Title</label>
                   <div class="form-field">
-                    <span class="form-group form-field-container"></span>
+                    <span class="form-field-container"></span>
                   </div>
                 </div>
                 <div class="form-group col-2-3">
                   <label for="your-comment">Comment</label>
                   <div class="form-field">
-                    <span class="form-group form-field-container"></span>
+                    <span class="form-field-container"></span>
                   </div>
                 </div>
                 <div class="form-group">
