--- a/form/04-article.html
+++ b/form/04-article.html
@@ -170,7 +170,7 @@
                   <label for="your-email">Email</label>
                   <div class="form-field">
                     <span class="form-field-container">
-                      <input type="email" name="your-email" id="your-email" placeholder="e.g. youremail@gmail.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" maxlength="55" autocomplete="on" accesskey="on" required>
+                      <input type="email" name="your-email" id="your-email" placeholder="e.g. youremail@gmail.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" maxlength="55" autocomplete="on" accesskey="e" required>
                     </span>
                   </div>
                 </div>
@@ -180,13 +180,17 @@
                 <div class="form-group col-2-3">
                   <label for="your-title">Title</label>
                   <div class="form-field">
-                    <span class="form-field-container"></span>
+                    <span class="form-field-container">
+                      <input type="text" name="your-title" id="your-title" placeholder="e.g. I loved that article" pattern="[A-Za-zÀ-ž\s]{4,}" maxlength="75" autocomplete="on" accesskey="t" required>
+                    </span>
                   </div>
                 </div>
                 <div class="form-group col-2-3">
                   <label for="your-comment">Comment</label>
                   <div class="form-field">
-                    <span class="form-field-container"></span>
+                    <span class="form-field-container">
+                      <textarea name="your-comment" id="your-comment" cols="30" rows="6" placeholder="Write your comment here" minlength="10" accesskey="c" required></textarea>
+                    </span>
                   </div>
                 </div>
                 <div class="form-group">
