--- a/Bootstrap/1-index.html
+++ b/Bootstrap/1-index.html
@@ -10,51 +10,51 @@
     </head>
     <body>
         <div class="row">
-            <div class="col-lg">Primary</div>
-            <div class="col-lg">Success</div>
-            <div class="col-lg">Danger</div>
-            <div class="col-lg">Warning</div>
+            <div class="col-lg bg-primary text-white p-2 text-center">Primary</div>
+            <div class="col-lg bg-success text-white p-2 text-center">Success</div>
+            <div class="col-lg bg-danger text-white p-2 text-center">Danger</div>
+            <div class="col-lg bg-warning text-white p-2 text-center">Warning</div>
         </div>
 
         <hr />
 
         <div class="row">
-            <div class="col-sm">Primary</div>
-            <div class="col-sm">Success</div>
-            <div class="col-sm">Danger</div>
-            <div class="col-sm">Warning</div>
+            <div class="col-sm p-2 text-center text-white bg-primary">Primary</div>
+            <div class="col-sm p-2 text-center text-white bg-success">Success</div>
+            <div class="col-sm p-2 text-center text-white bg-danger">Danger</div>
+            <div class="col-sm p-2 text-center text-white bg-warning">Warning</div>
         </div>
 
         <hr />
 
         <div class="row">
-            <div>Primary</div>
-            <div>Success</div>
-            <div>Danger</div>
+            <div class="col-lg-2 p-2 text-center text-white bg-primary">Primary</div>
+            <div class="col-lg-4 p-2 text-center text-white bg-success">Success</div>
+            <div class="col-lg-6 p-2 text-center text-white bg-danger">Danger</div>
         </div>
 
         <hr />
 
-        <div>
-            <div>Primary</div>
-            <div>Success</div>
-            <div>Danger</div>
-            <div>Warning</div>
+        <div class="row">
+            <div class="p-2 text-center text-white bg-primary">Primary</div>
+            <div class="p-2 text-center text-white bg-success">Success</div>
+            <div class="p-2 text-center text-white bg-danger">Danger</div>
+            <div class="p-2 text-center text-white bg-warning">Warning</div>
         </div>
 
         <hr/>
 
-        <div>
-            <div>Primary</div>
-            <div>Success</div>
+        <div class="row">
+            <div class="col-md-2 p-2 text-center text-white bg-primary">Primary</div>
+            <div class="col-md-2 p-2 text-center text-white bg-success">Success</div>
         </div>
 
         <hr/>
 
-        <div>
-            <div>Primary</div>
-            <div>Success</div>
-            <div>Danger</div>
+        <div class="row">
+            <div class="p-2 text-center text-white bg-primary">Primary</div>
+            <div class="p-2 text-center text-white bg-success">Success</div>
+            <div class="p-2 text-center text-white bg-danger">Danger</div>
         </div>
     </body>
 </html>
