added correct order for fourth row

--- a/Bootstrap/1-index.html
+++ b/Bootstrap/1-index.html
@@ -36,10 +36,10 @@
         <hr />
 
         <div class="row">
-            <div class="p-2 text-center text-white bg-primary">Primary</div>
-            <div class="p-2 text-center text-white bg-success">Success</div>
-            <div class="p-2 text-center text-white bg-danger">Danger</div>
-            <div class="p-2 text-center text-white bg-warning">Warning</div>
+            <div class="col p-2 text-center text-white bg-primary order-xl-first order-sm-last order-last">Primary</div>
+            <div class="col p-2 text-center text-white bg-success order-sm-first order-md-last">Success</div>
+            <div class="col p-2 text-center text-white bg-danger order-md-first order-lg-last">Danger</div>
+            <div class="col p-2 text-center text-white bg-warning order-lg-first order-xl-last">Warning</div>
         </div>
 
         <hr/>
