justified content for fifth row

--- a/Bootstrap/1-index.html
+++ b/Bootstrap/1-index.html
@@ -44,7 +44,7 @@
 
         <hr/>
 
-        <div class="row">
+        <div class="row justify-content-between">
             <div class="col-md-2 p-2 text-center text-white bg-primary">Primary</div>
             <div class="col-md-2 p-2 text-center text-white bg-success">Success</div>
         </div>
