--- a/Bootstrap/1-index.html
+++ b/Bootstrap/1-index.html
@@ -51,10 +51,10 @@
 
         <hr/>
 
-        <div class="row">
-            <div class="p-2 text-center text-white bg-primary">Primary</div>
-            <div class="p-2 text-center text-white bg-success">Success</div>
-            <div class="p-2 text-center text-white bg-danger">Danger</div>
+        <div class="row justify-content-between">
+            <div class="col-md-2 p-2 text-center text-white bg-primary">Primary</div>
+            <div class="col-md-2 p-2 text-center text-white bg-success offset-md-2">Success</div>
+            <div class="col-md-2 p-2 text-center text-white bg-danger">Danger</div>
         </div>
     </body>
 </html>
