--- a/Bootstrap/2-index.html
+++ b/Bootstrap/2-index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
     <body>
-        <header>
+        <header class="border-bottom p-2 mb-1 bg-light">
             <ul>
                 <li>
                     <a href="/">
