added horizontal listing

--- a/Bootstrap/2-index.html
+++ b/Bootstrap/2-index.html
@@ -9,17 +9,17 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
     <body>
-        <header class="border-bottom p-2 mb-1 bg-light">
-            <ul>
-                <li>
+        <header class="border-bottom p-2 mb-3 bg-light">
+            <ul class="list-inline mb-0">
+                <li class="list-inline-item">
                     <a href="/">
                         <img src="https://via.placeholder.com/150x50" />
                     </a>
                 </li>
-                <li>
+                <li class="list-inline-item">
                     <a href="#">Chemical elements</a>
                 </li>
-                <li>
+                <li class="list-inline-item">
                     <a href="#">Profile</a>
                 </li>
             </ul>
