used container flid to make main span width of page

--- a/Bootstrap/2-index.html
+++ b/Bootstrap/2-index.html
@@ -25,7 +25,7 @@
             </ul>
         </header>
 
-        <main>
+        <main class="container-fluid">
             <section>
                 <div role="alert">
                     <h4>List of chemical elements</h4>
