turned a tags into secondary buttons in header

--- a/Bootstrap/2-index.html
+++ b/Bootstrap/2-index.html
@@ -11,16 +11,16 @@
     <body>
         <header class="border-bottom p-2 mb-3 bg-light">
             <ul class="list-inline mb-0">
-                <li class="list-inline-item">
+                <li class="list-inline-item ml-auto">
                     <a href="/">
-                        <img src="https://via.placeholder.com/150x50" />
+                        <img src="https://via.placeholder.com/150x50" class="rounded" />
                     </a>
                 </li>
-                <li class="list-inline-item">
-                    <a href="#">Chemical elements</a>
+                <li class="list-inline-item mr-auto">
+                    <a href="#" class="btn btn-secondary">Chemical elements</a>
                 </li>
-                <li class="list-inline-item">
-                    <a href="#">Profile</a>
+                <li class="list-inline-item mr-auto">
+                    <a href="#" class="btn btn-secondary">Profile</a>
                 </li>
             </ul>
         </header>
