used alert alert-info to make first section blue

--- a/Bootstrap/2-index.html
+++ b/Bootstrap/2-index.html
@@ -17,7 +17,7 @@
                     </a>
                 </li>
                 <li class="list-inline-item mr-auto">
-                    <a href="#" class="btn btn-secondary">Chemical elements</a>
+                    <a href="#" class="btn btn-secondary active">Chemical elements</a>
                 </li>
                 <li class="list-inline-item mr-auto">
                     <a href="#" class="btn btn-secondary">Profile</a>
@@ -27,11 +27,11 @@
 
         <main class="container-fluid">
             <section>
-                <div role="alert">
+                <div role="alert" class="alert alert-info">
                     <h4>List of chemical elements</h4>
                     <p>This is a list of the 5 first chemical elements which have been identified as of 2019.</p>
                     <hr>
-                    <p>A popular visualization of all 118 elements is <a href="https://en.wikipedia.org/wiki/Periodic_table">the periodic table of the elements</a>.</p>
+                    <p class="mb-0">A popular visualization of all 118 elements is <a href="https://en.wikipedia.org/wiki/Periodic_table">the periodic table of the elements</a>.</p>
                 </div>
             </section>
 
