made only five a badge with correct rounding using rounded-pill

--- a/Bootstrap/2-index.html
+++ b/Bootstrap/2-index.html
@@ -36,7 +36,7 @@
             </section>
 
             <section>
-                <h1 class="mb-4 mt-5">Chemical elements <span>only 5</span></h1>
+                <h1 class="mb-4 mt-5">Chemical elements <span class="badge badge-info rounded-pill">only 5</span></h1>
 
                 <div>
                     <table>
