made table responsive

--- a/Bootstrap/2-index.html
+++ b/Bootstrap/2-index.html
@@ -38,8 +38,8 @@
             <section>
                 <h1 class="mb-4 mt-5">Chemical elements <span class="badge badge-info rounded-pill">only 5</span></h1>
 
-                <div>
-                    <table>
+                <div class="table-responsive">
+                    <table class="table">
                         <thead>
                             <tr>
                                 <th scope="col">Atomic number</th>
