added hover and dark mode for table

--- a/Bootstrap/2-index.html
+++ b/Bootstrap/2-index.html
@@ -39,7 +39,7 @@
                 <h1 class="mb-4 mt-5">Chemical elements <span class="badge badge-info rounded-pill">only 5</span></h1>
 
                 <div class="table-responsive">
-                    <table class="table">
+                    <table class="table table-dark table-hover">
                         <thead>
                             <tr>
                                 <th scope="col">Atomic number</th>
