made coding the card-header

--- a/Bootstrap/3-index.html
+++ b/Bootstrap/3-index.html
@@ -14,9 +14,9 @@
     <body>
         <div class="container-lg p-5">
             <div>
-                <div>
+                <div class="card">
                     <div>
-                        <div>Coding</div>
+                        <div class="card-header">Coding</div>
                         <img src="https://via.placeholder.com/450x200" />
                         <div>
                             <h5>HTML</h5>
@@ -26,9 +26,9 @@
                         <div>40h</div>
                     </div>
                 </div>
-                <div>
+                <div class="card">
                     <div>
-                        <div>Coding</div>
+                        <div class="card-header">Coding</div>
                         <img src="https://via.placeholder.com/450x200" />
                         <div>
                             <h5>CSS</h5>
@@ -38,9 +38,9 @@
                         <div>35h</div>
                     </div>
                 </div>
-                <div>
+                <div class="card">
                     <div>
-                        <div>Coding</div>
+                        <div class="card-header">Coding</div>
                         <img src="https://via.placeholder.com/450x200" />
                         <div>
                             <h5>Javascript</h5>
