--- a/Bootstrap/3-index.html
+++ b/Bootstrap/3-index.html
@@ -18,9 +18,9 @@
                     <div>
                         <div class="card-header">Coding</div>
                         <img src="https://via.placeholder.com/450x200" />
-                        <div>
-                            <h5>HTML</h5>
-                            <p>Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser.</p>
+                        <div class="card-body">
+                            <h5 class="card-title">HTML</h5>
+                            <p class="card-text">Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser.</p>
                             <button data-toggle="modal" data-target="#playModal">Play with</button>
                         </div>
                         <div>40h</div>
@@ -30,9 +30,9 @@
                     <div>
                         <div class="card-header">Coding</div>
                         <img src="https://via.placeholder.com/450x200" />
-                        <div>
-                            <h5>CSS</h5>
-                            <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.</p>
+                        <div class="card-body">
+                            <h5 class="card-title">CSS</h5>
+                            <p class="card-text">Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.</p>
                             <button data-toggle="modal" data-target="#playModal">Play with</button>
                         </div>
                         <div>35h</div>
@@ -42,9 +42,9 @@
                     <div>
                         <div class="card-header">Coding</div>
                         <img src="https://via.placeholder.com/450x200" />
-                        <div>
-                            <h5>Javascript</h5>
-                            <p>JavaScript, often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.</p>
+                        <div class="card-body">
+                            <h5 class="card-title">Javascript</h5>
+                            <p class="card-text">JavaScript, often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.</p>
                             <button data-toggle="modal" data-target="#playModal">Play with</button>
                         </div>
                         <div>70h</div>
