added margins for cards and card-footers

--- a/Bootstrap/3-index.html
+++ b/Bootstrap/3-index.html
@@ -14,7 +14,7 @@
     <body>
         <div class="container-lg p-5">
             <div>
-                <div class="card">
+                <div class="card mt-4">
                     <div>
                         <div class="card-header">Coding</div>
                         <img src="https://via.placeholder.com/450x200" />
@@ -23,10 +23,10 @@
                             <p class="card-text">Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser.</p>
                             <button data-toggle="modal" data-target="#playModal">Play with</button>
                         </div>
-                        <div>40h</div>
+                        <div class="card-footer">40h</div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card mt-4">
                     <div>
                         <div class="card-header">Coding</div>
                         <img src="https://via.placeholder.com/450x200" />
@@ -35,10 +35,10 @@
                             <p class="card-text">Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.</p>
                             <button data-toggle="modal" data-target="#playModal">Play with</button>
                         </div>
-                        <div>35h</div>
+                        <div class="card-footer">35h</div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card mt-4">
                     <div>
                         <div class="card-header">Coding</div>
                         <img src="https://via.placeholder.com/450x200" />
@@ -47,7 +47,7 @@
                             <p class="card-text">JavaScript, often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.</p>
                             <button data-toggle="modal" data-target="#playModal">Play with</button>
                         </div>
-                        <div>70h</div>
+                        <div class="card-footer">70h</div>
                     </div>
                 </div>
             </div>
