added more modal class options to get white box and modal header

--- a/Bootstrap/3-index.html
+++ b/Bootstrap/3-index.html
@@ -55,9 +55,9 @@
 
         <!-- Modal -->
         <div id="playModal" tabindex="-1" role="dialog" aria-labelledby="playModal" aria-hidden="true" class="modal container center-container">
-            <div role="document" class="text-center">
-                <div>
-                    <div>
+            <div role="document" class="text-center modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
                         <h5 id="exampleModalLabel">Play with CodePen</h5>
                         <button type="button" data-dismiss="modal" aria-label="Close" class="btn">
                             <span aria-hidden="true">&times;</span>
@@ -76,7 +76,7 @@
                             CodePen is one of the largest communities for web designers and developers to showcase their coding skills, with an estimated 330,000 registered users and 14.16 million monthly visitors.
                         </p>
 
-                        <form>
+                        <form class="form-group">
                             <div>
                                 <h5>Connect</h5>
                             </div>
