made tab navigation for ul

--- a/Bootstrap/4-index.html
+++ b/Bootstrap/4-index.html
@@ -13,14 +13,14 @@
     </head>
     <body class="bg-dark">
         <div class="container-lg bg-light p-3">
-            <h1>Bob Dylan</h1>
+            <h1 class="mb-3 mt-3">Bob Dylan</h1>
 
-            <ul>
-                <li>
-                    <a>Introduction</a>
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link active">Introduction</a>
                 </li>
-                <li>
-                    <a>Discography</a>
+                <li class="nav-item">
+                    <a class="nav-link">Discography</a>
                 </li>
             </ul>
             <div>
