--- a/Bootstrap/4-index.html
+++ b/Bootstrap/4-index.html
@@ -23,7 +23,7 @@
                     <a class="nav-link">Discography</a>
                 </li>
             </ul>
-            <div>
+            <div class="p-3 bg-white">
 
                 <div>
                     <p>
