tabs are now linked to paragraphs

--- a/Bootstrap/4-index.html
+++ b/Bootstrap/4-index.html
@@ -17,15 +17,15 @@
 
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link active">Introduction</a>
+                    <a class="nav-link active" data-toggle="tab" href="#Introduction">Introduction</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Discography</a>
+                    <a class="nav-link" data-toggle="tab" href="#Discography">Discography</a>
                 </li>
             </ul>
             <div class="p-3 bg-white">
 
-                <div>
+                <div class="tab-pane fade show active" id="Introduction">
                     <p>
                         Bob Dylan (born Robert Allen Zimmerman; May 24, 1941) is an American singer-songwriter, author, and visual artist who has been a major figure in popular culture for more than fifty years.
                     </p>
@@ -35,7 +35,7 @@
                     </p>
                 </div>
 
-                <div>
+                <div class="tab-pane fade show active" id="Discography">
                     <ul>
                         <li>
                             <a>Bob Dylan <em>(1962)</em></a>
