--- a/Bootstrap/5-index.html
+++ b/Bootstrap/5-index.html
@@ -12,7 +12,7 @@
         <h1 class="d-block d-md-none">Small title</h1>
         <h1 class="d-none d-md-block">Big title</h1>
 
-        <div>
+        <div class="center-container bg-info d-flex justify-content-between">
             <div>Left</div>
             <div>Middle</div>
             <div>Right</div>
