added borders for inner divs

--- a/Bootstrap/5-index.html
+++ b/Bootstrap/5-index.html
@@ -13,9 +13,9 @@
         <h1 class="d-none d-md-block">Big title</h1>
 
         <div class="center-container bg-info d-flex justify-content-between">
-            <div>Left</div>
-            <div>Middle</div>
-            <div>Right</div>
+            <div class="text-light bg-info border-bottom border-right">Left</div>
+            <div class="text-light bg-info border-bottom border-right border-left">Middle</div>
+            <div class="text-light bg-info border-bottom border-left">Right</div>
         </div>
 
     </body>
