added shadow to middle div and d-none d-md-block to disapper in smaller than medium size

--- a/Bootstrap/5-index.html
+++ b/Bootstrap/5-index.html
@@ -14,7 +14,7 @@
 
         <div class="border rounded p-2 center-container bg-info d-flex justify-content-between">
             <div class="text-align-center p-3 text-light bg-info border-bottom border-right">Left</div>
-            <div class="text-align-center p-3 text-light bg-info border-bottom border-right border-left">Middle</div>
+            <div class="d-none d-md-block shadow text-align-center p-3 text-light bg-info border-bottom border-right border-left">Middle</div>
             <div class="text-align-center p-3 text-light bg-info border-bottom border-left ">Right</div>
         </div>
 
