--- a/Bootstrap/5-index.html
+++ b/Bootstrap/5-index.html
@@ -12,7 +12,7 @@
         <h1 class="d-block d-md-none">Small title</h1>
         <h1 class="d-none d-md-block">Big title</h1>
 
-        <div class="border rounded p-2 center-container bg-info d-flex justify-content-between">
+        <div class="container-fluid border rounded p-2 center-container bg-info d-flex justify-content-between">
             <div class="text-align-center p-3 text-light bg-info border-bottom border-right">Left</div>
             <div class="d-none d-md-block shadow text-align-center p-3 text-light bg-info border-bottom border-right border-left">Middle</div>
             <div class="text-align-center p-3 text-light bg-info border-bottom border-left ">Right</div>
