put space between onheader

--- a/Bootstrap/2-index.html
+++ b/Bootstrap/2-index.html
@@ -10,16 +10,16 @@
     </head>
     <body>
         <header class="border-bottom p-2 mb-3 bg-light">
-            <ul class="list-inline mb-0">
-                <li class="list-inline-item ml-auto">
+            <ul class="list-inline d-flex justify-content-between mb-0">
+                <li class="list-inline-item">
                     <a href="/">
                         <img src="https://via.placeholder.com/150x50" class="rounded" />
                     </a>
                 </li>
-                <li class="list-inline-item mr-auto">
+                <li class="list-inline-item">
                     <a href="#" class="btn btn-secondary active">Chemical elements</a>
                 </li>
-                <li class="list-inline-item mr-auto">
+                <li class="list-inline-item">
                     <a href="#" class="btn btn-secondary">Profile</a>
                 </li>
             </ul>
