formatting not quite right but aligned right now....

--- a/Bootstrap/2-index.html
+++ b/Bootstrap/2-index.html
@@ -16,7 +16,7 @@
                         <img src="https://via.placeholder.com/150x50" class="rounded" />
                     </a>
                 </li>
-                <li class="list-inline-item">
+                <li class="list-inline-item offset-md-9">
                     <a href="#" class="btn btn-secondary active">Chemical elements</a>
                 </li>
                 <li class="list-inline-item">
