--- a/Bootstrap/3-index.html
+++ b/Bootstrap/3-index.html
@@ -15,7 +15,7 @@
         <div class="container-lg p-5">
             <div class="row">
                 <div class="card mt-4 col-md">
-                    <div>
+                    <div class="card-content">
                         <div class="card-header">Coding</div>
                         <img src="https://via.placeholder.com/450x200" class="card-img-top"/>
                         <div class="card-body">
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <div class="card mt-4 col-md">
-                    <div>
+                    <div class="card-content">
                         <div class="card-header">Coding</div>
                         <img src="https://via.placeholder.com/450x200" class="card-img-top"/>
                         <div class="card-body">
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <div class="card mt-4 col-md">
-                    <div>
+                    <div class="card-content">
                         <div class="card-header">Coding</div>
                         <img src="https://via.placeholder.com/450x200" class="card-img-top"/>
                         <div class="card-body">
