--- a/JQuery_advanced/1-index.html
+++ b/JQuery_advanced/1-index.html
@@ -11,12 +11,14 @@
         crossorigin="anonymous">
         </script>
         <script type="application/javascript">
-          function createTextElement () {
-            var paragraph = $('<p>').text('Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in diam risus. Nunc sit amet euismod ipsum. Aenean tempus ex sed est volutpat, sed sodales velit tempus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin auctor sollicitudin eleifend. Vivamus porta enim vitae mauris commodo, vitae tempor tellus elementum. Quisque sed pellentesque nulla, at eleifend nisi. Phasellus eget tincidunt ex. Lorem ipsum dolor sit amet, consectetur adipiscing elit.');
+          $(document).ready(function() {
+            function createTextElement () {
+              var paragraph = $('<p>').text('Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in diam risus. Nunc sit amet euismod ipsum. Aenean tempus ex sed est volutpat, sed sodales velit tempus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin auctor sollicitudin eleifend. Vivamus porta enim vitae mauris commodo, vitae tempor tellus elementum. Quisque sed pellentesque nulla, at eleifend nisi. Phasellus eget tincidunt ex. Lorem ipsum dolor sit amet, consectetur adipiscing elit.');
               $('body').append(paragraph);
-          }
+            }
 
-          createTextElement();
+            createTextElement();
+          });
         </script>
     </head>
 
