--- a/JQuery_advanced/2-index.html
+++ b/JQuery_advanced/2-index.html
@@ -19,7 +19,7 @@
                                 '<tr><td>Paulette</td><td>Salva</td></tr>' +
                                 '<tr><td>Antoine</td><td>Salva</td></tr>'
                             '</table>';
-
+                $('body').append(table);
 
             }
 
