only adding table to body now

--- a/JQuery_advanced/3-index.html
+++ b/JQuery_advanced/3-index.html
@@ -13,13 +13,7 @@
         <script type="application/javascript">
           $(document).ready(function() {
             function createFamilyTree () {
-              const table = '<table id="myTable">' +
-                                '<tr><th>Firstname</th><th>Lastname</th></tr>' +
-                                '<tr><td>Guillaume</td><td>Salva</td></tr>' +
-                                '<tr><td>Paulette</td><td>Salva</td></tr>' +
-                                '<tr><td>Antoine</td><td>Salva</td></tr>'
-                            '</table>';
-                $('body').append(table);
+              $('body').append('<table></table>');
 
             }
 
