--- a/JQuery_advanced/3-index.html
+++ b/JQuery_advanced/3-index.html
@@ -15,6 +15,9 @@
             function createFamilyTree () {
               $('body').append('<table></table>');
 
+              $('table').append('<tr></tr>');
+              $('table tr:last').append('<th></th>,<th></th>');
+
             }
 
             createFamilyTree();
