added firstname to header using .text keyword

--- a/JQuery_advanced/3-index.html
+++ b/JQuery_advanced/3-index.html
@@ -17,6 +17,7 @@
 
               $('table').append('<tr></tr>');
               $('table tr:last').append('<th></th>,<th></th>');
+              $('table tr:last th:eq(0)').text('Firstname')
 
             }
 
