added the rest of the rows!

--- a/JQuery_advanced/3-index.html
+++ b/JQuery_advanced/3-index.html
@@ -27,6 +27,21 @@
               $('table tr:last td:eq(0)').text('Guillaume');
               $('table tr:last td:eq(1)').text('Salva');
 
+
+              // second row
+              $('table').append('<tr></tr>');
+              $('table tr:last').append('<td></td>,<td></td>');
+              $('table tr:last td:eq(0)').text('Paulette');
+              $('table tr:last td:eq(1)').text('Salva');
+
+
+              // third row
+              $('table').append('<tr></tr>');
+              $('table tr:last').append('<td></td>,<td></td>');
+              $('table tr:last td:eq(0)').text('Antoine');
+              $('table tr:last td:eq(1)').text('Salva');
+
+
             }
 
             createFamilyTree();
