successfully removed tbody

--- a/JQuery_advanced/4-index.html
+++ b/JQuery_advanced/4-index.html
@@ -47,10 +47,11 @@
             }
 
             function replaceFamilyTree() {
-
+              $('table tbody *:not(tbody:first-child)').remove();
             }
 
             createFamilyTree();
+            replaceFamilyTree();
           });
         </script>
     </head>
