--- a/JQuery_advanced/3-index.html
+++ b/JQuery_advanced/3-index.html
@@ -16,31 +16,37 @@
               $('body').append('<table></table>');
 
               // table header
-              $('table').append('<tr></tr>');
-              $('table tr:last').append('<th></th>,<th></th>');
-              $('table tr:last th:eq(0)').text('Firstname');
-              $('table tr:last th:eq(1)').text('Lastname');
+              $('table').append('<thead></thead>')
+              $('thead').append('<tr></tr>');
+              $('thead tr:last').append('<th></th>,<th></th>');
+              $('thead tr:last th:eq(0)').text('Firstname');
+              $('thead tr:last th:eq(1)').text('Lastname');
 
+              $('table').append('<tbody></tbody')
               // first row
-              $('table').append('<tr></tr>');
-              $('table tr:last').append('<td></td>,<td></td>');
-              $('table tr:last td:eq(0)').text('Guillaume');
-              $('table tr:last td:eq(1)').text('Salva');
+              $('tbody').append('<tr></tr>');
+              $('tbody tr:last').append('<td></td>,<td></td>');
+              $('tbody tr:last td:eq(0)').text('Guillaume');
+              $('tbody tr:last td:eq(1)').text('Salva');
 
 
               // second row
-              $('table').append('<tr></tr>');
-              $('table tr:last').append('<td></td>,<td></td>');
-              $('table tr:last td:eq(0)').text('Paulette');
-              $('table tr:last td:eq(1)').text('Salva');
+              $('tbody').append('<tr></tr>');
+              $('tbody tr:last').append('<td></td>,<td></td>');
+              $('tbody tr:last td:eq(0)').text('Paulette');
+              $('tbody tr:last td:eq(1)').text('Salva');
 
 
               // third row
-              $('table').append('<tr></tr>');
-              $('table tr:last').append('<td></td>,<td></td>');
-              $('table tr:last td:eq(0)').text('Antoine');
-              $('table tr:last td:eq(1)').text('Salva');
+              $('tbody').append('<tr></tr>');
+              $('tbody tr:last').append('<td></td>,<td></td>');
+              $('tbody tr:last td:eq(0)').text('Antoine');
+              $('tbody tr:last td:eq(1)').text('Salva');
 
+
+            }
+
+            function replaceFamilyTree() {
 
             }
 
