added background color and text for x"

--- a/JQuery_advanced/5-index.html
+++ b/JQuery_advanced/5-index.html
@@ -30,6 +30,9 @@
               $('tbody tr:last').append('<td></td>,<td></td>,<td></td>');
               $('tbody tr:last td:eq(0)').text(firstName);
               $('tbody tr:last td:eq(1)').text(lastName);
+              $('tbody tr:last td:eq(2)').text('(x)');
+              $('tbody tr:last td:eq(2)').css('background-color', 'orange');
+
 
             }
 
