--- a/JQuery_advanced/5-index.html
+++ b/JQuery_advanced/5-index.html
@@ -40,7 +40,11 @@
             }
 
             createFamilyTree();
-            addNewMember('obiscoo', 'badoobee');
+            addNewMember('Guillaume', 'Salva');
+            addNewMember('Arielle', 'Snizt');
+            addNewMember('Fanette', 'Snizt');
+            addNewMember('Gerard', 'Snizt');
+            addNewMember('Victor', 'Salva');
           });
         </script>
     </head>
