added inputs and select

--- a/JQuery_advanced/6-index.html
+++ b/JQuery_advanced/6-index.html
@@ -54,6 +54,12 @@
                 const input1 = $('<input type="text"></input>');
                 const input2 = $('<input type="text"></input>');
 
+                const select = $('<select>' +
+                                    '<option value="before">Before</option>' +
+                                    '<option value="after">After</option>' +
+                                  '</select>'
+                                );
+
                 $('body').prepend('<input></input>');
               }
 
