--- a/JQuery_advanced/6-index.html
+++ b/JQuery_advanced/6-index.html
@@ -60,7 +60,10 @@
                                   '</select>'
                                 );
 
-                $('body').prepend('<input></input>');
+                const submit = $('<input type="submit" value="Submit">');
+
+
+                $('body').prepend(input1, input2, select, submit);
               }
 
             }
