--- a/JQuery_advanced/6-index.html
+++ b/JQuery_advanced/6-index.html
@@ -74,6 +74,7 @@
             addNewMember('Fanette', 'Snizt');
             addNewMember('Gerard', 'Snizt');
             addNewMember('Victor', 'Salva', 'before');
+            createForm();
           });
         </script>
     </head>
