--- a/JQuery_advanced/6-index.html
+++ b/JQuery_advanced/6-index.html
@@ -53,8 +53,8 @@
             }
 
             function createForm() {
-              const input1 = $('<input type="text"></input>');
-              const input2 = $('<input type="text"></input>');
+              // const input1 = $('<input type="text"></input>');
+              // const input2 = $('<input type="text"></input>');
 
               const select = $('<select>' +
                                   '<option value="before">Before</option>' +
@@ -65,10 +65,14 @@
               const submit = $('<input type="submit" value="Submit">');
 
 
-              $('body').prepend(input1, input2, select, submit);
+              $('body').prepend('<input type="text"></input>','<input type="text"></input>', select, submit);
 
               submit.click(function() {
-                addNewMember(input1.val(), input2.val(), select.val());
+                addNewMember(
+                              $('body input[type="text"]:nth-of-type(1)').val(),
+                              $('body input[type="text"]:nth-of-type(2)').val(),
+                              select.val()
+                            );
               });
             }
 
