--- a/JQuery_advanced/7-index.html
+++ b/JQuery_advanced/7-index.html
@@ -33,6 +33,22 @@
 
             function queryWikipedia(search) {
 
+              var params = new URLSearchParams({
+                  action: "query",
+                  list: "search",
+                  srsearch: "Nelson Mandela",
+                  format: "json",
+                  origin: location.origin
+              });
+
+              fetch(`${url}?${params}`)
+                  .then(function(response){return response.json();})
+                  .then(function(response) {
+                      if (response.query.search[0].title === "Nelson Mandela"){
+                          console.log("Your search page 'Nelson Mandela' exists on English Wikipedia" );
+                      }
+                  })
+                  .catch(function(error){console.log(error);});
             }
 
             createSearchForm();
