altered to work with search parameter and calling addnewarticle

--- a/JQuery_advanced/7-index.html
+++ b/JQuery_advanced/7-index.html
@@ -33,20 +33,24 @@
 
             function queryWikipedia(search) {
 
-              var params = new URLSearchParams({
+              const url = 'https://en.wikipedia.org/w/api.php';
+
+              const data = {
                   action: "query",
                   list: "search",
-                  srsearch: "Nelson Mandela",
+                  srsearch: search,
                   format: "json",
                   origin: location.origin
-              });
+              };
+
+              const params = new URLSearchParams(data).toString();
 
               fetch(`${url}?${params}`)
                   .then(function(response){return response.json();})
                   .then(function(response) {
-                      if (response.query.search[0].title === "Nelson Mandela"){
-                          console.log("Your search page 'Nelson Mandela' exists on English Wikipedia" );
-                      }
+                    response.query.search.forEach(function(result) {
+                      addNewArticle(result.pageid, result.title, result.snippet);
+                    });
                   })
                   .catch(function(error){console.log(error);});
             }
