--- a/JQuery_advanced/7-index.html
+++ b/JQuery_advanced/7-index.html
@@ -6,11 +6,9 @@
         <meta charset="utf-8" />
         <title>Task 0</title>
         <script
-        src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
-        integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
-        crossorigin="anonymous">
-        </script>
-        <script type="application/javascript">
+        src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+        crossorigin="anonymous"></script>        <script type="application/javascript">
           $(document).ready(function() {
             function createSearchForm() {
               const submit = $('<input type="submit">');
