--- a/JQuery_advanced/7-index.html
+++ b/JQuery_advanced/7-index.html
@@ -35,7 +35,7 @@
 
               const url = 'https://en.wikipedia.org/w/api.php';
 
-              const params = {
+              const data = {
                   action: "query",
                   list: "search",
                   srsearch: search,
@@ -43,17 +43,17 @@
                   origin: location.origin
               };
 
-              $.ajax({
-                url: url,
-                data:params,
-                dataType: "json",
-                success: function(response) {
-                  console.log(response);
-                },
-                error: function(error) {
-                  console.log(error);
-                }
-              });
+              const queryUrl = url + '?' + $.param(data);
+
+              window.processData = function(data) {
+                response.query.search.forEach(function(result) {
+                  addNewArticle(result.pageid, result.title, result.snippet);
+                });
+              };
+
+              const script = document.createElement('script');
+              script.src = queryUrl;
+              document.body.appendChild(script);
             }
 
             createSearchForm();
