--- a/Cookies_local_storage/0-index.html
+++ b/Cookies_local_storage/0-index.html
@@ -11,6 +11,8 @@
     <body>
       <input type="text" id="firstname">
       <input type="text" id="email">
+      <button id="logInButton">Log me in</button>
+      <button id="showCookiesButton">Show the cookies</button>
     </body>
 
 </html>
