--- a/Cookies_local_storage/0-index.html
+++ b/Cookies_local_storage/0-index.html
@@ -5,7 +5,7 @@
 
         <meta charset="utf-8" />
         <title>Task 0</title>
-        <script src="src/index.js"></script>
+        <script src="src/index.js" defer></script>
     </head>
 
     <body>
