added h1s to make it look like the image

--- a/Cookies_local_storage/0-index.html
+++ b/Cookies_local_storage/0-index.html
@@ -9,9 +9,11 @@
     </head>
 
     <body>
+      <h1>Login to the website</h1>
       <input type="text" id="firstname">
       <input type="text" id="email">
       <button id="logInButton">Log me in</button>
+      <h1>Cookies</h1>
       <button id="showCookiesButton">Show the cookies</button>
     </body>
 
