--- a/Cookies_local_storage/3-index.html
+++ b/Cookies_local_storage/3-index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-      <div>
+      <div id="loginForm">
         <h2>Login to the website</h2>
         <input type="text" id="firstname">
         <input type="text" id="email">
