restarting task 7 from task 6

--- a/Cookies_local_storage/3-index.html
+++ b/Cookies_local_storage/3-index.html
@@ -15,8 +15,8 @@
         <input type="text" id="email">
         <button id="logInButton">Log me in</button>
       </div>
-      <h2>Cookies</h2>
-      <button id="showCookiesButton">Show the cookies</button>
+      <!-- <h2>Cookies</h2>
+      <button id="showCookiesButton">Show the cookies</button> -->
     </body>
 
 </html>
