--- a/JQuery_advanced/7-index.html
+++ b/JQuery_advanced/7-index.html
@@ -6,57 +6,83 @@
         <meta charset="utf-8" />
         <title>Task 0</title>
         <script
-        src="https://code.jquery.com/jquery-3.7.1.min.js"
-        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-        crossorigin="anonymous"></script>        <script type="application/javascript">
+        src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+        integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
+        crossorigin="anonymous">
+        </script>
+        <script type="application/javascript">
           $(document).ready(function() {
-            function createSearchForm() {
-              const submit = $('<input type="submit">');
-              const input = $('<input type="text" id="textBox" autocomplete="off">');
-              const ul = $('<ul></ul>');
-              $('body').append(input, submit, ul);
+            function createFamilyTree () {
+              $('body').append('<table></table>');
 
-              submit.click(function () {
-                queryWikipedia(input.val());
+              // table header
+              $('table').append('<thead></thead>')
+              $('thead').append('<tr></tr>');
+              $('thead tr:last').append('<th></th>,<th></th>');
+              $('thead tr:last th:eq(0)').text('Firstname');
+              $('thead tr:last th:eq(1)').text('Lastname');
+
+              $('table').append('<tbody></tbody')
+            }
+
+            function addNewMember(firstName, lastName, position) {
+
+              if (position === 'before') {
+                $('tbody').prepend('<tr></tr>');
+                $('tbody tr:first').prepend('<td></td>,<td></td>,<td></td>');
+                $('tbody tr:first td:eq(0)').text(firstName);
+                $('tbody tr:first td:eq(1)').text(lastName);
+                $('tbody tr:first td:eq(2)').text('(x)');
+                $('tbody tr:first td:eq(2)').css('background-color', 'orange');
+                $('tbody tr:first td:eq(2)').click(function() {
+                  $(this).closest('tr').remove();
+                });
+              } else {
+                $('tbody').append('<tr></tr>');
+                $('tbody tr:last').append('<td></td>,<td></td>,<td></td>');
+
+                $('tbody tr:last td:eq(0)').text(firstName);
+                $('tbody tr:last td:eq(1)').text(lastName);
+                $('tbody tr:last td:eq(2)').text('(x)');
+                $('tbody tr:last td:eq(2)').css('background-color', 'orange');
+                $('tbody tr:last td:eq(2)').click(function() {
+                  $(this).closest('tr').remove();
+                });
+              }
+
+            }
+
+            function createForm() {
+              // const input1 = $('<input type="text"></input>');
+              // const input2 = $('<input type="text"></input>');
+
+              const select = $('<select>' +
+                                  '<option value="before">Before</option>' +
+                                  '<option value="after">After</option>' +
+                                '</select>'
+                              );
+
+              const submit = $('<input type="submit" value="Submit">');
+
+
+              $('body').prepend('<input type="text"></input>','<input type="text"></input>', select, submit);
+
+              submit.click(function() {
+                addNewMember(
+                              $('body input[type="text"]:nth-of-type(1)').val(),
+                              $('body input[type="text"]:nth-of-type(2)').val(),
+                              select.val()
+                            );
               });
             }
 
-            function addNewArticle(id, title, snippet) {
-              $('body ul').append('<li></li>');
-              $('body ul li').append('<p></p>,<p></p>');
-              $('body ul li p:eq(0)').append('<span></span>, <b></b>');
-              $('body ul li p:eq(0) span').text(id + ' -');
-              $('body ul li p:eq(0) b').text(title);
-
-              $('body ul li p:eq(1)').text(snippet);
-            }
-
-            function queryWikipedia(search) {
-
-              const url = 'https://en.wikipedia.org/w/api.php';
-
-              const data = {
-                  action: "query",
-                  list: "search",
-                  srsearch: search,
-                  format: "json",
-                  origin: location.origin
-              };
-
-              const queryUrl = url + '?' + $.param(data);
-
-              window.processData = function(data) {
-                response.query.search.forEach(function(result) {
-                  addNewArticle(result.pageid, result.title, result.snippet);
-                });
-              };
-
-              const script = document.createElement('script');
-              script.src = queryUrl;
-              document.body.appendChild(script);
-            }
-
-            createSearchForm();
+            createFamilyTree();
+            addNewMember('Guillaume', 'Salva');
+            addNewMember('Arielle', 'Snizt');
+            addNewMember('Fanette', 'Snizt');
+            addNewMember('Gerard', 'Snizt');
+            addNewMember('Victor', 'Salva', 'before');
+            createForm();
           });
         </script>
     </head>
