added createsearchform function

--- a/JQuery_advanced/7-index.html
+++ b/JQuery_advanced/7-index.html
@@ -8,7 +8,35 @@
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
         <script type="application/javascript">
           $(document).ready(function() {
+            function createSearchForm() {
+              const form = $('<form/>');
+              const input = $('<input>').attr({
+                'type': 'text'
+              });
+              const submit = $('<input>').attr({
+                'type': 'submit',
+                'value': 'Search'
+              });
+              const ul = $('<ul>').attr('id', 'searchResults');
 
+              form.append(input).append(submit);
+              $('body').append(form).append(ul);
+
+              form.submit(function(a) {
+                a.preventDefault();
+                const searchInput = input.val();
+                $('#searchResults').empty();
+                queryWikipedia(searchInput);
+              });
+            }
+
+            function addNewArticle() {
+
+            }
+
+            function queryWikipedia() {
+
+            }
           });
         </script>
     </head>
