--- a/JQuery_advanced/7-index.html
+++ b/JQuery_advanced/7-index.html
@@ -30,8 +30,13 @@
               });
             }
 
-            function addNewArticle() {
+            function addNewArticle(id, title, snippet) {
+              const li = $('<li/>');
+              const p1 = $('<p><span>' + id + ' - </span><b>' + title + '</b></p>');
+              const p2 = $('<p>' + snippet + '</p>');
 
+              li.append(p1).append(p2);
+              $('#searchResults').append(li);
             }
 
             function queryWikipedia() {
