--- a/JQuery_advanced/7-index.html
+++ b/JQuery_advanced/7-index.html
@@ -7,28 +7,27 @@
         <title>Task 0</title>
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
         <script type="application/javascript">
-          $(document).ready(function() {
-            function createSearchForm() {
-              const form = $('<form/>');
-              const input = $('<input>').attr({
-                'type': 'text'
-              });
-              const submit = $('<input>').attr({
-                'type': 'submit',
-                'value': 'Search'
-              });
+          function createSearchForm() {
+            const form = $('<form/>');
+            const input = $('<input>').attr({
+              'type': 'text'
+            });
+            const submit = $('<input>').attr({
+              'type': 'submit',
+              'value': 'Search'
+            });
               const ul = $('<ul>').attr('id', 'searchResults');
 
-              form.append(input).append(submit);
-              $('body').append(form).append(ul);
+                form.append(input).append(submit);
+                $('body').append(form).append(ul);
 
-              form.submit(function(a) {
-                a.preventDefault();
-                const searchInput = input.val();
-                $('#searchResults').empty();
-                queryWikipedia(searchInput);
-              });
-            }
+                form.submit(function(a) {
+                  a.preventDefault();
+                  const searchInput = input.val();
+                  $('#searchResults').empty();
+                  queryWikipedia(searchInput);
+                });
+              }
 
             function addNewArticle(id, title, snippet) {
               const li = $('<li/>');
@@ -39,9 +38,26 @@
               $('#searchResults').append(li);
             }
 
-            function queryWikipedia() {
-
+            function queryWikipedia(search) {
+              $.ajax({
+                url: "https://en.wikipedia.org/w/api.php",
+                data: {
+                  action: 'query',
+                  list: 'search',
+                  srsearch: search,
+                  format: 'json'
+                },
+                dataType: 'jsonp',
+                success: function(response) {
+                  let results = responce.query.search;
+                  for (let i = 0; i < results.length; i++) {
+                    addNewArticle(results[i].pageid, results[i].title, results[i].snippet);
+                  }
+                }
+              });
             }
+          $(document).ready(function() {
+            createSearchForm();
           });
         </script>
     </head>
