--- a/JQuery_advanced/7-index.html
+++ b/JQuery_advanced/7-index.html
@@ -49,7 +49,7 @@
                 },
                 dataType: 'jsonp',
                 success: function(response) {
-                  let results = responce.query.search;
+                  let results = response.query.search;
                   for (let i = 0; i < results.length; i++) {
                     addNewArticle(results[i].pageid, results[i].title, results[i].snippet);
                   }
